<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/shareMyBikeId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content_main_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/share_my_bike_logo" />

    <TextView
        android:id="@+id/subtitleId"
        android:layout_width="303dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:autoSizeTextType="none"
        android:background="#FFFFFF"
        android:text="@string/app_subtitle_text"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3B3C3C"
        android:textStyle="bold|italic"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareMyBikeId" />

    <TextView
        android:id="@+id/emailId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="64dp"
        android:autoSizeTextType="uniform"
        android:text="@string/app_email_text"
        app:layout_constraintBottom_toBottomOf="@+id/locationIconId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/locationIconId"
        app:layout_constraintTop_toTopOf="@+id/locationIconId" />


    <ImageView
        android:id="@+id/locationIconId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_map_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitleId"
        app:srcCompat="@drawable/ic_baseline_place_24" />

    <ImageView
        android:id="@+id/emailIconId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/content_map_vector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationIconId"
        app:srcCompat="@drawable/ic_baseline_alternate_email_24" />


    <TextView
        android:id="@+id/locationId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="64dp"
        android:text="@string/app_location_text"
        app:layout_constraintBottom_toBottomOf="@+id/emailIconId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/emailIconId"
        app:layout_constraintTop_toTopOf="@+id/emailIconId" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/app_login_button"
        app:layout_constraintBottom_toTopOf="@id/logoId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logoId"
        android:layout_width="156dp"
        android:layout_height="104dp"
        android:contentDescription="@string/content_login_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/logo" />



</androidx.constraintlayout.widget.ConstraintLayout>